index.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

html, 
body {
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
}

/* Typography */

h1 {
    text-transform: capitalize;
    margin: 0;
}

/* Flex Containers */

.hero {
    display: flex;
    flex-direction: column;
    padding-left: 1.25em;
    padding-right: 1.25em;
}

/* Nav */ 

nav,
nav .container,
nav ul {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.188em;
}

nav {
    font-size: 0.75rem;
    font-weight: bold;
    padding: 0 1.25em;
}

nav ul {
    list-style-type: none;
    gap: 2.5em;
}

nav li {
    text-transform: uppercase;
}

nav img {
    width: 1.438em;
    height: 1.438em;
}

/* Hero */

.hero {
    padding-top: 5.438em;
    color: white;
    min-height: 293px;
    background-color: #888;
    background-blend-mode: multiply;
    background-image: url("/images/article-image-hero.jpg");
    background-size: cover;
}

.hero > time {
    font-size: 0.75rem;
    margin-bottom: 0.5em;
}

.hero > p {
    line-height: 1.5;
}

/* Blogs */

section > article.blog {
    padding: 1.25em;
}

article.blog > img {
    width: 100%;
    margin: 0 auto;
    display: block;
}

